--- a/Portfolio/Views/Shared/_ContactForm.cshtml
+++ b/Portfolio/Views/Shared/_ContactForm.cshtml
@@ -4,6 +4,7 @@
         <h3>Contact Me</h3>
     </div>
     <div class="modal-body">
+        <p>Call me at (512) 619-4518. Or shoot me an email through the form below.</p>
         <form method="post" class="form-stacked">
             <fieldset>
                 <div class="clearfix">
