--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -11,11 +11,11 @@
 <body>
     <section id="content" class="container_16">
         <header class="grid_16">
-            <a href="@Url.Action("Index","Home")" class="grid_4">
+            <a href="@Url.Action("Index","Work")" class="grid_4">
                 <img src="@Url.Content("~/img/elements/poindexter.png")" alt="POINDEXTER"/>
             </a>
             <div class="grid_4">&nbsp;</div>
-            <section id="about" class="grid_8">I’m Daniel Poindexter, a web application generalist in Houston. I do database, code, user interface, front-end development and visual design. <a href="#">Get in touch with me.</a></section>
+            <section id="about" class="grid_8">I’m Daniel Poindexter, a web application generalist in Houston. I do database, code, user interface, front-end development and visual design. <a data-controls-modal="contact-modal" data-backdrop="static">Get in touch with me.</a></section>
         </header>
             <nav class="grid_4">
             @{
