--- a/Portfolio/Views/Shared/_Nav.cshtml
+++ b/Portfolio/Views/Shared/_Nav.cshtml
@@ -1,4 +1,4 @@
-﻿<a href="#">Work</a>
-<a href="#">Résumé</a>
-<a href="#">About</a>
+﻿@Html.ActionLink("Work", "Index", "Work")
+@Html.ActionLink("Résumé", "Index", "Resume")
+@Html.ActionLink("About", "Index", "About")
 <a data-controls-modal="contact-modal" data-backdrop="static">Contact</a>
