--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -40,9 +40,7 @@
     <script src="@Url.Content("~/Scripts/bootstrap-modal.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/knockout-2.0.0.debug.js")" type="text/javascript"></script>
     <script type="text/javascript">
-        $(function () {
-            //$("#contact-modal").modal();
-        })
+        var IMGPATH = '@Url.Content("~/img/")';
     </script>
     @RenderSection("scripts", required: false)
     @RenderSection("templates", required: false)
