Change error settings in web.config to detect AppHarbor errors

--- a/Portfolio/Views/Projects/Create.cshtml
+++ b/Portfolio/Views/Projects/Create.cshtml
@@ -26,8 +26,12 @@
                 <div class="input"><input type="text" id="SiteUrl" name="SiteUrl" placeholder="http://www.example.com"></div>
             </div>
             <div class="clearfix">
-                <label for="Keywords">Keywords</label>
-                <div class="input"><textarea id="Keywords" name="Keywords" placeholder="ASP.NET MVC3, C#"></textarea></div>
+                <label for="Keywords">Disciplines</label>
+                <div class="input"><textarea id="Keywords" name="Keywords" placeholder="Visual Design, Back-End Code"></textarea></div>
+            </div>
+            <div class="clearfix">
+                <label for="Technologies">Technologies</label>
+                <div class="input"><textarea id="Technologies" name="Technologies" placeholder="ASP.NET MVC3, C#"></textarea></div>
             </div>
             <div class="clearfix">
                 <label for="Thumbnail">Thumbnail Image File</label>
