Add missing img and type files to VS solution

--- a/Portfolio/Content/main.css
+++ b/Portfolio/Content/main.css
@@ -172,3 +172,10 @@ a#gallery-next.inactive {
     cursor: default;
     background-image: none;
 }
+
+/* Definition lists */
+
+#overview dl {
+    padding-left: 20px;
+    font-size: 1em;
+}
