--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <title>@(ViewBag.Title ?? "Web Application Development | Daniel Poindexter")</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
+    <link rel="stylesheet" href="@Url.Content("~/Content/bootstrap/bootstrap.less")">
     <link href="@Url.Content("~/content/main.css")" rel="stylesheet" type="text/css"/>
     @RenderSection("styles", required: false)
 </head>
@@ -15,7 +15,7 @@
                 <img src="@Url.Content("~/img/elements/poindexter.png")" alt="POINDEXTER"/>
             </a>
             <div class="grid_4">&nbsp;</div>
-            <section id="about" class="grid_8">I’m Daniel Poindexter, a web application generalist in Houston. I do database, code, user interface, front-end development and visual design. <a data-controls-modal="contact-modal" data-backdrop="static">Get in touch with me.</a></section>
+            <section id="about" class="grid_8">I’m Daniel Poindexter, a web application generalist in Houston. I do database, code, user interface, front-end development and visual design. <!--<a data-controls-modal="contact-modal" data-backdrop="static">Get in touch with me.</a>--></section>
         </header>
             <nav class="grid_4">
             @{
@@ -26,21 +26,33 @@
                 @RenderSection("article")
             </article>
         <footer class="grid_16">
-            @RenderSection("footer", required: false)
+            @{
+                Html.RenderPartial("_Footer");
+            }
         </footer>
     </section>
 
     @{
-        Html.RenderPartial("_ContactForm");
+        //Html.RenderPartial("_ContactForm");
     }
 
     <!--Javascript: jQuery, jQuery UI, Underscore, Knockout-->
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.min.js" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/underscore-min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/bootstrap-modal.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/knockout-2.0.0.debug.js")" type="text/javascript"></script>
     <script type="text/javascript">
         var IMGPATH = '@Url.Content("~/img/")';
+
+        $(function () {
+            $("nav a").hover(
+                function(event){
+                    $(this).children("span:not(.active)").animate({width: "+=40"}, 150);
+                },
+                function(event){
+                    $(this).children("span:not(.active)").animate({ width: "-=40" }, 150);
+                }
+            );
+        })
     </script>
     @RenderSection("scripts", required: false)
     @RenderSection("templates", required: false)
