--- a/Portfolio/Content/main.css
+++ b/Portfolio/Content/main.css
@@ -82,9 +82,10 @@ h2 {
     font-size: 3.6em;
     text-transform: uppercase;
     letter-spacing: -1px;
-    margin: 0 0 20px 0;
-    padding: 0;
     line-height: 1em;
+    margin: 0;
+    padding: 18px 20px;
+    background: url(../img/elements/horizontal-dash.png) repeat-x left bottom;
 }
 
 h3 {
@@ -130,11 +131,6 @@ a:hover {
     padding-bottom: 0px;
 }
 
-#work h2 {
-    padding-left: 20px;
-    padding-top: 15px;
-}
-
 .container_16 article.grid_12 .grid_8 {
    width: 479px;    
 }
@@ -148,6 +144,10 @@ figure {
     padding: 20px  0 0 20px;
     background: url(../img/elements/horizontal-dash.png) repeat-x left top;
     position: relative;
+}
+
+figure.first {
+    background-image: none;   
 }
 
 figure img {
@@ -275,11 +275,10 @@ section#overview {
 section#description {
     border-left: 1px solid #000;
     width: 478px;
-    padding-bottom: 20px;
-    margin-bottom: 1em;   
+    padding-bottom: 20px;   
 }
 
-h4 {
+#project h4 {
     background: url(../img/elements/horizontal-dash.png) repeat-x left bottom;
     padding-left: 20px;
     margin-bottom: 10px; 
@@ -300,12 +299,6 @@ h4 {
     padding-top: 20px;
 }
 
-#about h2 {
-    padding: 18px 20px;
-    background: url(../img/elements/horizontal-dash.png) repeat-x left bottom;
-    margin-bottom: 0;
-}
-
 /* Footer styles
 =========================================================================*/
 
@@ -316,6 +309,43 @@ footer p {
     margin-top: 0;
 }
 
-/* Bootstrap form styles
+/* Resume page-specific styles
 =========================================================================*/
+
+table.resume {
+    border-top: 1px solid black;
+    margin-top: 10px;
+    margin-left: 20px;
+    width: auto;
+}
+
+.resume td {
+    border-top: 1px solid #666;
+    border-right: none;
+    border-bottom: none;
+    border-left: none;
+    padding: 0;
+}
+
+.resume td.position {
+    border-right: 1px solid #666;
+    width: 180px;
+    text-align: right;
+}
+
+.resume td.description {
+    
+}
+
+.resume h3 {
+    margin: 0;
+    padding: 0;
+    line-height: 1em;   
+}
+
+.resume h4 {
+    margin: 0;
+    padding: 0;
+    line-height: 1em;
+}
 
