--- a/Portfolio/Views/Work/Index.cshtml
+++ b/Portfolio/Views/Work/Index.cshtml
@@ -2,19 +2,28 @@
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
+    int first = 0;
 }
 
 @section article {
 <article id="work" class="grid_12">
     <h2>Projects</h2>
     
-    @foreach (var project in Model) {            
-        <a href="@Url.Action("Project", "Work", new { id = project.Id })" class="project">
-            <figure>
-                <img src="@Url.Content("~/img/work/" + project.Thumbnail)" alt="@project.Name"/>
-                <figcaption>@project.Name</figcaption>
-            </figure>
-        </a>
+    @for (var i = 0; i < Model.Count(); i++)
+    {
+        if (Model.ElementAt(i).Thumbnail.IsEmpty() && i == first)
+        {
+            first++;
         }
+        else
+        {       
+            <a href="@Url.Action("Project", "Work", new { id = Model.ElementAt(i).Id })" class="project">
+                <figure class="@((i == first) ? "first" : "")">
+                    <img src="@Url.Content("~/img/work/" + Model.ElementAt(i).Thumbnail)" alt="@Model.ElementAt(i).Name"/>
+                    <figcaption>@Model.ElementAt(i).Name</figcaption>
+                </figure>
+            </a>
+        }
+    }
 </article>
 }
